@@ -7,6 +7,9 @@ Changelog for Poi
 Poi 1.2 - (Unreleased)
 ----------------------
 
+- Do not try to apply a CustomizationPolicy.
+  [maurits]
+
 - Remove backwards compatibility code for old CMFCore permissions.
   [maurits]
 
